themes/blankslate-child/sass/layouts/_landing.scss
.l-landing {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  margin: 0 auto;
  padding: 0 var(--size-200) 0 var(--size-200);

  @media (min-width: $breakpoint-700) {
    grid-template-columns: repeat(12, 1fr);
    padding-left: 0;
    padding-right: 0;
  }
}


.l-landing__hero {
  margin-bottom: 2.5rem;
  grid-column: 1 / 2;

  @media (min-width: $breakpoint-700) {
    grid-column: 2 / 12;
  }

  img {
    width: 100%;
  }
}


.l-landing__topic {
  border-top: var(--border-thin) solid var(--color-gray-light);
  grid-column: 1 / 2;

  @media (min-width: $breakpoint-700) {
    grid-column: 2 / 4;
  }

  .u-dark-on-light & {
    border-color: var(--color-gray-darkest);
  }
}


.l-landing__heading {
  grid-column: 1 / 2;
  margin-top: 0;
  padding-top: var(--size-200);

  @media (min-width: $breakpoint-700) {
    grid-column: 5 / 10;
    padding-top: 0;
  }
}

.l-landing__share {
  display: flex;
  gap: var(--size-100);
  grid-column: 1 / 3;
  margin-top: var(--size-300);

  @media (min-width: $breakpoint-700) {
    grid-column: 2 / 4;
    grid-row: 4 / 5;
  }
}

.l-landing__byline {
  border-top: var(--border-thin) solid var(--color-gray-light);
  color: var(--color-gray-darkest);
  font-family: var(--font-primary);
  font-size: var(--font-size-200);
  font-weight: var(--type-weight-bold);
  margin-top: var(--size-300);
  padding-top: var(--size-100);
  grid-column: 1 / 10;

  @media (min-width: $breakpoint-700) {
    grid-column: 2 / 4;
  }

  & ~ .l-landing__share {
    @media (min-width: $breakpoint-700) {
      margin-top: var(--size-950);
    }
  }

  .u-dark-on-light & {
    border-color: var(--color-gray-darkest);
  }
}


.l-landing__content {
  max-width: 72ch;

  @media (min-width: $breakpoint-700) {
    grid-column: 5 / 10;
  }
}


.l-landing__section {

  &:nth-of-type(2n) {
    margin-top: var(--size-900);
  }

  @media (min-width: $breakpoint-700) {
    margin-top: var(--size-900);
  }
}


.l-recommended-videos {
  background-color: var(--color-gray-darkest);
  grid-column: 1 / 13;
  margin-top: calc(var(--size-250) + var(--size-400));
  outline: var(--size-250) solid var(--color-gray-darkest);
  padding-top: var(--size-150);
  padding-bottom: var(--size-900);

  @media (min-width: $breakpoint-700) {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: auto;
    margin-top: var(--size-400);
    outline: none;
    padding-top: var(--size-400);
  }
}


.l-recommended-videos__title {
  grid-column: 1 / 13;
  grid-row: 1 / 2;
  margin-left: var(--size-200);

  @media (min-width: $breakpoint-700) {
    margin-left: 0;
    grid-column: 2 / 12;
  }
}


.l-recommended-videos__list {
  display: flex;
  flex-direction: column;
  gap: var(--size-500);
  grid-column: 1 / 13;
  grid-row: 2 / 3;
  margin-top: var(--size-500);
  margin-right: var(--size-200);
  margin-left: var(--size-200);

  @media (min-width: $breakpoint-700) {
    flex-direction: row;
    grid-column: 2 / 12;
    margin-right: 0;
    margin-left: 0;
  }
}

